--- a/GameStore/Views/Empresas/Index.cshtml
+++ b/GameStore/Views/Empresas/Index.cshtml
@@ -6,11 +6,10 @@
     <div class="col-md-8 offset-md-2">
         <form asp-action="Index" method="get">
     <div class="form-actions no-color">
-        <p>
-            Buscar <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
-            <input type="submit" value="Buscar" class="btn btn-default" /> |
-            <a asp-action="Index">Volver a lista</a>
-        </p>
+        <form asp-action="Index" method="get" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Buscar"name="SearchString" value="@ViewData["CurrentFilter"]">
+            <button class="btn btn-outline-success my-0 my-sm-2" value="Buscar" type="submit">Search</button>
+        </form>
     </div>
     </form>
     <table class="table">
