--- a/GameStore/Views/Home/Index.cshtml
+++ b/GameStore/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="card">
+  <div class="card-header">
+    GameStore
+  </div>
+  <div class="card-body">
+    <blockquote class="blockquote mb-0">
+      <p>Tienda de videojuegos online</p>
+    </blockquote>
+  </div>
 </div>
